--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "iqtool/laravel-signoz",
     "description": "Laravel Signoz integration",
     "type": "library",
+    "license": "MIT",
     "require": {
         "php": ">=8.0.0",
         "illuminate/support": "^10.0|^11.0",
@@ -31,3 +32,4 @@
         }
     }
 }
+
