--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require": {
         "php": ">=8.0.0",
-        "illuminate/support": "^10.0|^11.0",
+        "illuminate/support": "*",
         "open-telemetry/sdk": "^1.0",
         "open-telemetry/exporter-otlp": "^1.0",
         "php-http/guzzle7-adapter": "^1.0",
@@ -32,4 +32,5 @@
         }
     }
 }
+
 
